kuber-homeworks/2.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-deployment
  template:
    metadata:
      labels:
        app: netology-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
